apps/hblink/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    # Routed VIP from the bgp-ingress pool (talos/cni/bgp-ingress.yaml).
    lbipam.cilium.io/ips: "10.246.0.2"
    external-dns.kubernetes.io/hostname: dmr.home.arpa
    external-dns.kubernetes.io/ttl: "60"
  labels:
    app.kubernetes.io/instance: hblink
    app.kubernetes.io/name: hblink
    app.kubernetes.io/service: hblink
    external-dns.invertedorigin.com/enabled: "true"
    network.invertedorigin.com/bgp-ingress: "true"
  name: hblink
spec:
  allocateLoadBalancerNodePorts: false
  # Advertised only from the node running hblink; peers keep their real IPs.
  externalTrafficPolicy: Local
  loadBalancerSourceRanges:
    - 10.0.1.0/24
  ports:
    - name: dmr
      nodePort: 0
      port: 62031
      protocol: UDP
      targetPort: dmr
  selector:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: hblink
    app.kubernetes.io/name: hblink
  type: LoadBalancer
